--- a/comentarios-filmes-series.html
+++ b/comentarios-filmes-series.html
@@ -140,7 +140,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="C:\AAPROZ\imdb.jpg" alt="Logo IMDB" class="imagem">
+            <img src=".\img\imdb.jpg" alt="Logo IMDB" class="imagem">
         </div>
         <div class="menu">
             <ul>
@@ -153,7 +153,7 @@
     </header>
 
     <div class="banner">
-        <img src="C:\AAPROZ\bannerPromo.jpg" alt="Banner Promocional" class="imagem1">
+        <img src=".\img\bannerPromo.jpg" alt="Banner Promocional" class="imagem1">
     </div>
 
     <div class="filters">
@@ -166,21 +166,21 @@
     <div class="content">
         <div class="item">
             <div class="comment">
-                <img src="C:\AAPROZ\chaplin.jpg" alt="Chaplin" class="imagem"><br>
+                <img src=".\img\chaplin.jpg" alt="Chaplin" class="imagem"><br>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
                 7.9
             </div>
         </div>
         <div class="item">
             <div class="comment">
-                <img src="C:\AAPROZ\goonies.jpg" alt="Goonies" class="imagem"><br>
+                <img src=".\img\goonies.jpg" alt="Goonies" class="imagem"><br>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
                 8.7
             </div>
         </div>
         <div class="item">
             <div class="comment">
-                <img src="C:\AAPROZ\killbill.jpg" alt="Kill Bill" class="imagem"><br>
+                <img src=".\img\killbill.jpg" alt="Kill Bill" class="imagem"><br>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
                 9.5
             </div>
