--- a/comentarios-filmes-series.html
+++ b/comentarios-filmes-series.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>Sua Página</title>
@@ -130,10 +130,11 @@
         }
         .imagem2 {
             width: "100" /* Defina a largura da imagem como 100% da largura da janela de visualização */
-            height:"10"
-            display: block; /* Remova espaços em branco extras abaixo da imagem */
+            height "10"
+            display  block; /* Remova espaços em branco extras abaixo da imagem */
             float: left; /* Alinha a imagem à esquerda */
-            margin-right: 10px;
+            margin-right: 10
+        
         }
     </style>
 </head>
