Mudei a imagem do batman

--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -11,7 +11,7 @@
         <h2>Confira os Destaques de Hoje</h2>
 
         <img src="./img/adão.png" alt="AdãoNegro">
-        <img src="./img/filmes.png" alt="Batman">
+        <img src="./img/Batman.jpg" alt="Batman">
         <img src="./img/man.png" alt="Homem de Ferro">
 
         <section>
