Acréscimo de footer e header em destaque

--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -6,7 +6,7 @@
     <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <title>Sua Página</title>
+        <title>Atores Vida&Obra</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -143,9 +143,9 @@
         <div class="menu">
             <ul>
                 <li><a href="pagina1.html">Página 1</a></li>
-                <li><a href="pagina2.html">Página 2</a></li>
-                <li><a href="pagina3.html">Página 3</a></li>
-                <li><a href="pagina4.html">Página 4</a></li>
+                <li><a href="destaquesDeHoje.html">Destaques</a></li>
+                <li><a href="comentarios-filmes-series.html">Comentários</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
         </div>
     </header>
