--- a/comentarios-filmes-series.html
+++ b/comentarios-filmes-series.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Sua Página</title>
+    <title>Comentários Filmes&Séries</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -146,9 +146,9 @@
         <div class="menu">
             <ul>
                 <li><a href="pagina1.html">Página 1</a></li>
-                <li><a href="pagina2.html">Página 2</a></li>
-                <li><a href="pagina3.html">Página 3</a></li>
-                <li><a href="pagina4.html">Página 4</a></li>
+                <li><a href="destaquesDeHoje.html">Destaques</a></li>
+                <li><a href="atores-vida-obra.html">Atores-vida-obra</a></li>
+                <li><a href="login.html">Sair</a></li>
             </ul>
         </div>
     </header>
