--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -3,20 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Destaques de Hoje</title>
+    <style>
+         body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000;
+         }
+         header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+         .logo {
+            display: inline-block;
+            text-align: left;
+            font-size: 24px;
+            margin-right: 20px;
+        }
+        .menu ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #333;
+        }
+        .menu li {
+            display: inline;
+            margin-right: 20px;
+        }
+        .menu a {
+            text-decoration: none;
+            color: #808080;
+            text-align: center;
+        }
+        h1 {
+            color: #808080;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+         
+        .footer ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                background-color: #333;
+            }
+        .footer li {
+                display: inline;
+                margin-right: 20px;
+            }
+        .footer a {
+                text-decoration: none;
+                color: #808080;
+                text-align: center;
+            }
+            h1{
+                color: #808080;
+                text-align: center;
+            }
+            h2{
+                color: #808080;
+                text-align: center;
+            }
+            h3{
+                color: #808080;
+                text-align: center;
+            }
+            .content {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .content .item {
+            flex: 1;
+            padding: 20px;
+            text-align: center;
+            color: #808080;
+            background-color: #000;
+        }
+        .comment {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin: 10px;
+        }
+        .comment img {
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src=".\img\imdb.jpg" alt="Logo IMDB" class="imagem">
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="pagina1.html">Página 1</a></li>
+                <li><a href="atores-vida-obra.html">Atores-vida-obra</a></li>
+                <li><a href="comentarios-filmes-series.html">Comentários</a></li>
+                <li><a href="login.html">Sair</a></li>
+            </ul>
+        </div>
+    </header>
     <main>
         <h1>Destaques</h1>
         <h2>Confira os Destaques de Hoje</h2>
-
-        <img src="./img/adão.png" alt="AdãoNegro">
-        <img src="./img/Batman.jpg" alt="Batman">
-        <img src="./img/man.png" alt="Homem de Ferro">
-
+        <div class="content">
+            <div class="item">
+                <div class="comment">
+                    <img src="./img/adão.png" alt="AdãoNegro" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    <a href="http://">Clique para assistir</a>
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src="./img/Batman.jpg" alt="Batman" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    <a href="http://">Clique para assistir</a>
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src="./img/man.png" alt="Homem de Ferro" class="imagem"><br>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    <a href="http://">Clique para assistir</a>
+                </div>
+            </div>
+        </div>
         <section>
-            <p>Os Melhoes filmes você encontra aqui, na IMDB.</p>
+            <h3><p>Os Melhoes filmes você encontra aqui, na IMDB.</p></h3>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+        <ul>
+            <li><a href="pagina1.html">Página A</a></li>
+            <li><a href="pagina2.html">Página B</a></li>
+            <li><a href="pagina3.html">Página C</a></li>
+            <li><a href="pagina4.html">Página D</a></li>
+        </ul>
+        </div>
+    </footer>    
 </body>
 </html>
