--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Sua Página</title>
+    <title>Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
