--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -7,133 +7,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Atores Vida&Obra</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-                background-color: #000;
-            }
-            header {
-                background-color: #333;
-                color: #fff;
-                padding: 10px 0;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-            .logo {
-                display: inline-block;
-                text-align: left;
-                font-size: 24px;
-                margin-right: 20px;
-            }
-            .menu ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                background-color: #333;
-            }
-            .menu li {
-                display: inline;
-                margin-right: 20px;
-            }
-            .menu a {
-                text-decoration: none;
-                color: #808080;
-                text-align: center;
-            } .filters {
-            background-color: #000;
-            padding: 20px;
-        }
-        form {
-            max-width: 500px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 10px;
-            color: #808080;
-        }
-        input[type="text"],
-        textarea,
-        select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-        }
-        button {
-            background-color: #D0B312;
-            color: #000;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-        }
-        .content {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .content .item {
-            flex: 1;
-            padding: 20px;
-            text-align: center;
-            color: #808080;
-            background-color: #000;
-        }
-        .comment {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 10px;
-        }
-        .comment img {
-            max-width: 100%;
-        }
-        .comment-form {
-            background-color: #000;
-            padding: 20px;
-        }
-        h1 {
-            color: #808080;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-         
-        .footer ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                background-color: #333;
-            }
-        .footer li {
-                display: inline;
-                margin-right: 20px;
-            }
-        .footer a {
-                text-decoration: none;
-                color: #808080;
-                text-align: center;
-            }
-        .imagem1 {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-        .imagem2 {
-            width: "100" /* Defina a largura da imagem como 100% da largura da janela de visualização */
-            height "10"
-            display  block; /* Remova espaços em branco extras abaixo da imagem */
-            float: left; /* Alinha a imagem à esquerda */
-            margin-right: 10
-        
-        }
-    </style>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
