--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -4,100 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Destaques de Hoje</title>
-    <style>
-         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-         }
-         header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-         .logo {
-            display: inline-block;
-            text-align: left;
-            font-size: 24px;
-            margin-right: 20px;
-        }
-        .menu ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            background-color: #333;
-        }
-        .menu li {
-            display: inline;
-            margin-right: 20px;
-        }
-        .menu a {
-            text-decoration: none;
-            color: #808080;
-            text-align: center;
-        }
-        h1 {
-            color: #808080;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-         
-        .footer ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                background-color: #333;
-            }
-        .footer li {
-                display: inline;
-                margin-right: 20px;
-            }
-        .footer a {
-                text-decoration: none;
-                color: #808080;
-                text-align: center;
-            }
-            h1{
-                color: #808080;
-                text-align: center;
-            }
-            h2{
-                color: #808080;
-                text-align: center;
-            }
-            h3{
-                color: #808080;
-                text-align: center;
-            }
-            .content {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .content .item {
-            flex: 1;
-            padding: 20px;
-            text-align: center;
-            color: #808080;
-            background-color: #000;
-        }
-        .comment {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 10px;
-        }
-        .comment img {
-            max-width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
