--- a/login.html
+++ b/login.html
@@ -3,83 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .logo {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        .login {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .input-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px 0;
-        }
-        .input-container input[type="text"],
-        .input-container input[type="password"] {
-            width: 50%;
-            padding: 10px;
-            margin: 0 10px;
-            border: 1px solid #ccc;
-        }
-        .input-container button {
-            background-color: #D0B312;
-            color: #000;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-        }
-        .bottom-options {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px 0;
-        }
-        .bottom-options a {
-            text-decoration: none;
-            color: #D0B312;
-            margin: 0 10px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-         
-        .footer ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                background-color: #333;
-            }
-        .footer li {
-                display: inline;
-                margin-right: 20px;
-            }
-        .footer a {
-                text-decoration: none;
-                color: #808080;
-                text-align: center;
-            }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
