Criação dee página home

--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -16,7 +16,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="pagina1.html">Página 1</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="destaquesDeHoje.html">Destaques</a></li>
                 <li><a href="comentarios-filmes-series.html">Comentários</a></li>
                 <li><a href="login.html">Sair</a></li>
