--- a/login.html
+++ b/login.html
@@ -35,10 +35,11 @@
     <footer>
         <div class="footer">
         <ul>
-            <li><a href="pagina1.html">Página A</a></li>
-            <li><a href="pagina2.html">Página B</a></li>
-            <li><a href="pagina3.html">Página C</a></li>
-            <li><a href="pagina4.html">Página D</a></li>
+            <li><a href="pagina1.html">Instagram</a></li>
+            <li><a href="pagina2.html">Facebook</a></li>
+            <li><a href="pagina3.html">Twiter</a></li>
+            <li><a href="pagina4.html">Tik-Tok</a></li>
+            <li><a href="pagina4.html">Sobre nós</a></li>
         </ul>
         </div>
     </footer>
