--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -13,7 +13,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="pagina1.html">Página 1</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="atores-vida-obra.html">Atores-vida-obra</a></li>
                 <li><a href="comentarios-filmes-series.html">Comentários</a></li>
                 <li><a href="login.html">Sair</a></li>
@@ -53,10 +53,11 @@
     <footer>
         <div class="footer">
         <ul>
-            <li><a href="pagina1.html">Página A</a></li>
-            <li><a href="pagina2.html">Página B</a></li>
-            <li><a href="pagina3.html">Página C</a></li>
-            <li><a href="pagina4.html">Página D</a></li>
+            <li><a href="pagina1.html">Instagram</a></li>
+            <li><a href="pagina2.html">Facebook</a></li>
+            <li><a href="pagina3.html">Twiter</a></li>
+            <li><a href="pagina4.html">Tik-Tok</a></li>
+            <li><a href="pagina4.html">Sobre nós</a></li>
         </ul>
         </div>
     </footer>    
