--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <a href="#">Lembrar de mim</a>
         </div>
         <div class="input-container">
-            <button>Entrar</button>
+            <a href="home.html"></a><button>Entrar</button>
         </div>
         <div class="bottom-options">
             <a href="#">Não é registrado? Crie uma conta!</a>
