--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -1,25 +1,19 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Destaques de Hoje</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Menu/Menu.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src=".\img\imdb.jpg" alt="Logo IMDB" class="imagem">
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="atores-vida-obra.html">Atores-vida-obra</a></li>
-                <li><a href="comentarios-filmes-series.html">Comentários</a></li>
-                <li><a href="login.html">Sair</a></li>
-            </ul>
-        </div>
-    </header>
+    <header id="home-header"></header>
     <main>
         <h1>Destaques</h1>
         <h2>Confira os Destaques de Hoje</h2>
@@ -62,4 +56,5 @@
         </div>
     </footer>    
 </body>
+<script src="../Menu/menuScript.js"></script>
 </html>
