--- a/login.html
+++ b/login.html
@@ -2,45 +2,51 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src=".\img\imdb.jpg" alt="Logo IMDB" class="imagem">
+            <img src="img/imdb.jpg" alt="Logo IMDB" class="imagem">
         </div>
     </header>
 
     <div class="login">
         <h1>Login</h1>
         <div class="input-container">
-            <input type="text" placeholder="Insira seu nome">
+            <input type="text" placeholder="Insira seu nome , ID ou E-mail">
         </div>
         <div class="input-container">
             <input type="password" placeholder="Insira sua senha">
         </div>
         <div class="bottom-options">
-            <a href="#">Esqueceu a senha</a>
-            <a href="#">Lembrar de mim</a>
+            <label for="lembrar">
+                <input type="checkbox" id="lembrar" name="lembrar"> Lembrar de mim
+            </label>
+        </div>
+        <div class="bottom-options">
+            <a href="#">Esqueceu a senha ?</a>
+            
+            
         </div>
         <div class="input-container">
             <a href="home.html"><button>Entrar</button></a>
         </div>
         <div class="bottom-options">
-            <a href="#">Não é registrado? Crie uma conta!</a>
+            <a href="#">Não está registrado? Crie uma conta!</a>
         </div>
     </div>
 
     <footer>
         <div class="footer">
-        <ul>
-            <li><a href="pagina1.html">Instagram</a></li>
-            <li><a href="pagina2.html">Facebook</a></li>
-            <li><a href="pagina3.html">Twiter</a></li>
-            <li><a href="pagina4.html">Tik-Tok</a></li>
-            <li><a href="pagina4.html">Sobre nós</a></li>
-        </ul>
+            <ul>
+                <li><a href="pagina1.html">Instagram</a></li>
+                <li><a href="pagina2.html">Facebook</a></li>
+                <li><a href="pagina3.html">Twitter</a></li>
+                <li><a href="pagina4.html">Sobre nós</a></li>
+            </ul>
         </div>
     </footer>
 </body>
