Adicionando seção de noticias e destaques

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -55,33 +55,95 @@
                 </a>
             </div>
         </section>
-        <h2 style="margin-left: 40px; padding-left: 10px; border-left: 2px solid #E2B616;">Em Destaque Hoje</h2>
+        <h2 style="margin-left: 40px; padding-left: 10px; border-left: 2px solid #E2B616;color: white;">Em Destaque Hoje</h2>
+
         <section class="mt-5 w-60 d-flex flex-row align-content-center justify-content-around">
 
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+              <a href="Home.html">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="../img/adão.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">"Adão Negro" conta a história de Teth-Adam, um antigo campeão egípcio que ganhou poderes mágicos que o transformaram em um ser superpoderoso, mas que, ao longo dos séculos, sucumbe à escuridão. Interpretado por Dwayne Johnson, o filme segue a jornada do Adão Negro em busca de redenção e justiça, enquanto ele enfrenta desafios sobrenaturais e outros super-heróis da DC.</p>
                 </div>
               </div>
+              </a>
+              <a href="Home.html">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="../img/bezouro-azul.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Bezouro Azul é um personagem de quadrinhos da DC Comics e parte da equipe Os Novos Titãs. O filme pode explorar as aventuras desse super-herói, também conhecido como Ted Kord.</p>
                 </div>
               </div>
+              </a>
+              <a href="Home.html">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="../img/avatar.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">"Avatar" segue a jornada de Jake Sully, um ex-militar paraplégico, que participa de um programa para habitar um avatar na lua Pandora. Lá, ele se apaixona por uma Na'vi, Neytiri, e se envolve em uma batalha épica entre os nativos e os humanos que desejam explorar os recursos do planeta. O filme é uma exploração de temas como colonização, respeito pela natureza e identidade.</p>
                 </div>
               </div>
+              </a>
+              <a href="Home.html">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="../img/barbie.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">A série de filmes da Barbie é composta por várias histórias em que a boneca Barbie assume uma variedade de papéis e aventuras. Cada filme oferece uma narrativa única e muitas vezes aborda mensagens de amizade, autoaceitação e positividade. As histórias variam desde contos de fadas até aventuras modernas, sempre com a personagem Barbie no centro das experiências emocionantes.</p>
+                </div>
+              </div>
+              </a>
+              <a href="Home.html">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="../img/matrix.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">A trilogia "Matrix" segue a jornada de Neo, um hacker que descobre que o mundo que ele conhece é uma ilusão criada por máquinas para manter os humanos subjugados. Com a ajuda de Morpheus e Trinity, Neo se torna o escolhido e lidera uma rebelião contra as máquinas. A série explora temas de realidade virtual, livre arbítrio e a luta pela liberdade humana em um futuro distópico onde máquinas dominam a Terra.</p>
+                </div>
+              </div>
+              </a>
+        </section>
+        <h2 style="margin-left: 40px; padding-left: 10px; border-left: 2px solid #E2B616; color: white;" class="mt-5">Notícias Recentes</h2>
+        <section class="mt-5 w-60 d-flex flex-row align-content-center justify-content-around">
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class=" img-card-noticia">
+                <img src="../img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Beyoncé estrela seu novo filme.</h5>
+                  <p class="card-text">O Novo filme musical com estrelato de beyoncé já apareceu como teaser no grammy desse ano.</p>
+                  <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class=" img-card-noticia">
+                <img src="../img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Beyoncé estrela seu novo filme.</h5>
+                  <p class="card-text">O Novo filme musical com estrelato de beyoncé já apareceu como teaser no grammy desse ano.</p>
+                  <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class=" img-card-noticia">
+                <img src="../img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Exemplo Noticia.</h5>
+                  <p class="card-text">Exemplo Noticia descricao detalhada sobre</p>
+                  <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
     </main>
 </body>
