sobreposição de itens

--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
-    <!DOCTYPE html>
-    <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <title>Atores Vida&Obra</title>
-        <link rel="stylesheet" href="style.css">
+    <title>Atores Vida & Obra</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
-            <img src=".\img\imdb.jpg" alt="Logo IMDB" class="imagem">
+            <img src="./img/imdb.jpg" alt="Logo IMDB" class="imagem">
         </div>
         <div class="menu">
             <ul>
@@ -34,33 +32,45 @@
         <div class="item">
             <div class="comment">
                 <img src=".\img\keanureeves.jpg" alt="Ator Keannu Reeves" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."<br>
             </div>
         </div>
         <div class="item">
             <div class="comment">
                 <img src=".\img\galgadot.jpg" alt="Atriz Gal Gadot" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."<br>
             </div>
         </div>
         <div class="item">
             <div class="comment">
                 <img src=".\img\ianmackelen.jpg" alt="Ator Ian Mackelen" class="imagem"><br>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."<br>
             </div>
         </div>
     </div>
-
-
     <footer>
         <div class="footer">
-        <ul>
-            <li><a href="pagina1.html">Página A</a></li>
-            <li><a href="pagina2.html">Página B</a></li>
-            <li><a href="pagina3.html">Página C</a></li>
-            <li><a href="pagina4.html">Página D</a></li>
-        </ul>
+            <ul>
+                <li><a href="pagina1.html">Instagram</a></li>
+                <li><a href="pagina2.html">Facebook</a></li>
+                <li><a href="pagina3.html">Twitter</a></li>
+                <li><a href="pagina4.html">Tik-Tok</a></li>
+                <li><a href="pagina4.html">Sobre nós</a></li>
+            </ul>
         </div>
     </footer>
 </body>
+
 </html>
