--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmes online</title>
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="./Home.css">
     <link rel="stylesheet" href="./Menu/Menu.css">
     <link rel="stylesheet" href="./footer/footer.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
