--- a/login.html
+++ b/login.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./footer/footer.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -28,8 +43,8 @@
         </div>
         <div class="bottom-options">
             <a href="#">Esqueceu a senha ?</a>
-            
-            
+
+
         </div>
         <div class="input-container">
             <a href="home.html"><button>Entrar</button></a>
@@ -38,16 +53,10 @@
             <a href="#">Não está registrado? Crie uma conta!</a>
         </div>
     </div>
+    <footer id="home-footer"></footer>
 
-    <footer>
-        <div class="footer">
-            <ul>
-                <li><a href="pagina1.html">Instagram</a></li>
-                <li><a href="pagina2.html">Facebook</a></li>
-                <li><a href="pagina3.html">Twitter</a></li>
-                <li><a href="pagina4.html">Sobre nós</a></li>
-            </ul>
-        </div>
-    </footer>
 </body>
+
+<script src="./footer/footerScript.js"></script>
+
 </html>
