--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -18,57 +18,68 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="style.css">
-        <title>Atores Vida&Obra</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Atores Vida&Obra</title>
 </head>
 
 <body>
-    
-        <header id="home-header"></header>
-    
-    <div class="filters">
-        <form action="/pesquisar" method="GET">
-            <input type="text" name="q" placeholder="Pesquisar ator ou atriz...">
-            <button type="submit">Pesquisar</button>
-        </form>
-    </div>
 
-    <div class="content">
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\keanureeves.jpg" alt="Ator Keannu Reeves" class="imagem"><br>
-                <p class="texto"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br></p>
+    <header id="home-header"></header>
+    <main>
+        <div class="filters">
+            <form action="/pesquisar" method="GET">
+                <input type="text" name="q" placeholder="Pesquisar ator ou atriz...">
+                <button type="submit">Pesquisar</button>
+            </form>
+        </div>
+
+        <div class="content">
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\keanureeves.jpg" alt="Ator Keannu Reeves" class="imagem"><br>
+                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum."<br>
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\galgadot.jpg" alt="Atriz Gal Gadot" class="imagem"><br>
+                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum."<br>
+                </div>
+            </div>
+            <div class="item">
+                <div class="comment">
+                    <img src=".\img\ianmackelen.jpg" alt="Ator Ian Mackelen" class="imagem"><br>
+                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum."<br>
+                </div>
             </div>
         </div>
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\galgadot.jpg" alt="Atriz Gal Gadot" class="imagem"><br>
-                <p class="texto"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br></p>
-            </div>
-        </div>
-        <div class="item">
-            <div class="comment">
-                <img src=".\img\ianmackelen.jpg" alt="Ator Ian Mackelen" class="imagem"><br>
-                <p class="texto"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum."<br></p>
-            </div>
-        </div>
-    </div>
+    </main>
     <footer id="home-footer"></footer>
 </body>
 
 
 <script src="./footer/footerScript.js"></script>
 <script src="./Menu/menuScript.js"></script>
+
 </html>
